fixed overflow of tabs

--- a/client/src/views/Event/components/JoinEventModal/JoinEventModal.css
+++ b/client/src/views/Event/components/JoinEventModal/JoinEventModal.css
@@ -1,14 +1,13 @@
 .join-event-modal{
     position: fixed;
     bottom: 0px;
-    z-index: 5;
     width: 100%;
+    z-index: 5;
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding: 5px;
     background: white;
-    border-radius: 5px;
     -webkit-box-shadow: 0px 0px 16px -1px rgb(69, 69, 69, 0.4);
     -moz-box-shadow: 0px 0px 16px -1px rgba(69,69,69,0.4);
     box-shadow: 0px 0px 16px -1px rgba(69,69,69,0.4);
