--- a/client/src/views/Event/components/Tabs/Tabs.css
+++ b/client/src/views/Event/components/Tabs/Tabs.css
@@ -4,7 +4,7 @@
     background: white;
     justify-content: center;
     align-content: center;
-    border: 1px solid rgba(69,69,69,0.1);
+    border-bottom: 1px solid rgba(69,69,69,0.1);
 }
 
 .tabs-container {
